retrieveNA31/objects/Core_IPS_Customer_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Core_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IPS Customer Feedback</relationshipLabel>
        <relationshipName>IPS_Customer_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>IPS Customer Feedback</relationshipLabel>
        <relationshipName>IPS_Customer_Feedback</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Core_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>IPS Customer Feedback</relationshipLabel>
        <relationshipName>IPS_Customer_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_General_Comments__c</fullName>
        <inlineHelpText>Comments and Suggestions</inlineHelpText>
        <label>General Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_Issue_Resolved__c</fullName>
        <label>Issue Resolved</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Level_of_Satisfaction__c</fullName>
        <label>Tool Satisfaction</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_Quality_of_Response__c</fullName>
        <label>Quality of Response</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_Survey_Link__c</fullName>
        <inlineHelpText>Survey URL</inlineHelpText>
        <label>Survey Link</label>
        <type>Url</type>
    </fields>
    <label>IPS Customer Feedback</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>IPS Customer Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IPS Customer Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>